RESOLVED FIXED 114337
Autocorrected text doesn't have a marker of type autocorrected
https://bugs.webkit.org/show_bug.cgi?id=114337
Summary Autocorrected text doesn't have a marker of type autocorrected
Ryosuke Niwa
Reported 2013-04-10 00:31:52 PDT
http://trac.webkit.org/changeset/147994 revealed that when a misspelled word is autocorrected, only a marker for replacement is added, not of the type autocorrected.
Attachments
Fixes the bug (678.47 KB, patch)
2013-04-10 22:24 PDT, Ryosuke Niwa
no flags
Ryosuke Niwa
Comment 1 2013-04-10 22:24:14 PDT
Created attachment 197505 [details] Fixes the bug
Darin Adler
Comment 2 2013-04-11 10:52:27 PDT
Comment on attachment 197505 [details] Fixes the bug View in context: https://bugs.webkit.org/attachment.cgi?id=197505&action=review > Source/WebCore/editing/Editor.cpp:2303 > + i++; I like writing this as ++i
WebKit Commit Bot
Comment 3 2013-04-11 11:56:10 PDT
Comment on attachment 197505 [details] Fixes the bug Clearing flags on attachment: 197505 Committed r148221: <http://trac.webkit.org/changeset/148221>
WebKit Commit Bot
Comment 4 2013-04-11 11:56:12 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.